# SocraticLLM

./: .gitignore  CLAUDE.md  README.md  REFERENCES.md  SOCRATICLLM.md  TODO.md  VISION.md  pyproject.toml
examples/: repl.py
learner/: state.json
socraticllm/: __init__.py
socraticllm/curriculum/: __init__.py  algebra_1.py  concept_graph.py  lessons.py
socraticllm/engine/: __init__.py  dialogue.py  guardrail.py  llm_client.py
socraticllm/model/: __init__.py  attention.py  embeddings.py  feedforward.py  softmax.py  transformer.py
socraticllm/narration/: __init__.py  levels.py  narrator.py
socraticllm/student/: __init__.py  model.py
socraticllm/tokenizer/: bpe.py
student/: state.json
tests/: test_algebra_1.py  test_attention.py  test_concept_graph.py  test_dialogue.py  test_embeddings.py  test_feedforward.py  test_guardrail.py  test_llm_client.py  test_softmax.py  test_student_model.py  test_tokenizer.py  test_transformer.py
