[project]
name = "socraticllm"
version = "0.1.0"
description = "A Socratic tutor: a dialogue system that teaches recognition, not answers."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["socraticllm*"]
